@@ -28,7 +28,7 @@ h3. Current Features:
 *** @validates_presence_of@ - <small>except :on, :if/:unless</small>
 *** @validates_size_of@ - <small>except :on, :if/:unless</small>
 ** Remote (AJAX)
-*** @validates_uniqueness_of@ (remote validations a bit unstable still, work in progress) =)
+*** @validates_uniqueness_of@ (remote validations a bit unstable still, work in progress but works "okay") =)
 * Client-side & remote (AJAX) validations hand-in-hand: You won't notice, it's all taken care of seamlessly. When it works client-side; that is used. When more complex stuff is happening; an AJAX request is performed under the hood.
 * Supports all Rails core form field helpers.
 * Remote validators (AJAX) use Rails core validations, so the API for additional validations is very clean - seamless actually.
@@ -92,6 +92,8 @@ $ ./script/generate validatious
       create  public/javascripts/v2.config.js
       create  public/javascripts/v2.rails.js
 </pre>
+
+*Important:* It is very impostant that you do this (update these scripts) on each new gem release; especially @v2.Rails@ will be a subject for change because this library contains kind of low level helpers to get Validatious and additional features such as AJAX validations to play. I'm not sure what might be added/removed in the future, but as long as you keep these updated you probably won't notice any difference.
 
 h3. 2. Include the javascripts in your layout
 
